# runa

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/components/layout/: AppShell.tsx  PrimarySidebar.module.css  PrimarySidebar.tsx  ShellLayoutContext.tsx  StatusBar.module.css  StatusBar.tsx  TopBar.module.css  TopBar.tsx  layout.css
frontend/src/components/ui/: HttpMethodSelect.module.css  HttpMethodSelect.tsx  IconButton.module.css  IconButton.tsx  MethodBadge.module.css  MethodBadge.tsx  TextInput.module.css  TextInput.tsx
frontend/src/features/collection-dashboard/: CollectionDashboardView.module.css  CollectionHomeView.tsx  CollectionTreePanel.module.css  CollectionTreePanel.tsx  CollectionWorkspaceLayout.tsx  CollectionsToolbar.module.css  CollectionsToolbar.tsx  EmptyCollectionState.module.css  EmptyCollectionState.tsx  FavoritesPanel.module.css  FavoritesPanel.tsx
frontend/src/features/request-editor/: AuthorizationPanel.module.css  AuthorizationPanel.tsx  (+12 more)
frontend/src/styles/: design-tokens.json  global.css
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/bridge/: collection_tree.rs  mod.rs  request_file.rs
src/collection/: json.rs  mod.rs  toml.rs  yaml.rs
src/filesystem/: mod.rs  reader.rs  request_load.rs  writer.rs
src/models/: files.rs  method.rs  mod.rs
src/ui/: mod.rs
(+7 files in other folders)
