[package]
name = "runa"
version = "0.1.0"
edition = "2024"
description = "A collaborative API tester"

[workspace]
members = ["src-tauri"]
resolver = "2"
default-members = ["src-tauri"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
env_logger = "0.11.9"
log = "0.4.29"
dotenv = "0.15.0"
