[package]
name = "runa-tauri"
version = "0.1.0"
description = "Shell de escritorio Tauri para Runa"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
runa = { path = ".." }

[features]
custom-protocol = ["tauri/custom-protocol"]
